GitOps/environments/dev/ingress/streamcard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamcart-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /api/catalog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 80

      - path: /api/payment(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8000

      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 80
